--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/inversify": "^2.0.33",
+    "@types/mocha": "^7.0.2",
     "@types/node": "^12.0.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "inversify": "^4.13.0",
     "mocha": "^5.2.0",
     "reflect-metadata": "^0.1.13",
