--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/ts-node src/app/main.ts",
-    "test": "./node_modules/.bin/mocha --compilers ts:ts-node/register ./src/**/*.spec.ts"
+    "test": "./node_modules/.bin/mocha --timeout 20000 --compilers ts:ts-node/register ./src/**/*.spec.ts"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +13,12 @@
     "@types/inversify": "^2.0.33",
     "@types/mocha": "^7.0.2",
     "@types/node": "^12.0.0",
+    "axios": "^0.19.2",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "dotenv": "^8.2.0",
     "inversify": "^4.13.0",
+    "js-sha512": "^0.8.0",
     "mocha": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.1.0",
